2009-07-27  Donal K. Fellows  <dkf@users.sf.net>

	* doc/GetScroll.3: Reworded and reordered so as to indicate that the
	Tcl_Obj forms are preferred.

2009-07-26  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n: Corrected description of acceptable join styles.
	Spotted by Emiliano Gavilan.

2009-07-23  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkSelect.c (HandleTclCommand): [Bug 2441988]: Stop losing
	reports of errors in selection handlers; that's what the background
	error handling code is for.
	*** POTENTIAL INCOMPATIBILITY *** if your code was relying on erroring
	selection scripts being silent.
	(LostSelection, Tk_SelectionObjCmd): Stop using the vastly inefficient
	TkCopyAndGlobalEval; better to use Tcl_Obj refcount management.

2009-07-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFocus.c (TkFocusDeadWindow): [Bug 2496114]: Ensure that
	focus desynchronization doesn't cause a crash.

2009-07-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFont.c (TkUnderlineAngledTextLayout): [Bug 2356057]:
	Corrected drawing of rotated underlines.

2009-07-21  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tkFont.c: [Bug 2328657]: Explicitly exclude hacky zero-char
	chunks from intersection computation. Might deserve generalization to
	other tests.

2009-07-20  Donal K. Fellows  <dkf@users.sf.net>

	* tests/clipboard.test (clipboard-6.2): [Bug 2824378]: Corrected
	result of test in light of changes to binary selection retrieval.

2009-07-18  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixSelect.c (SelCvtFromX32, SelCvtFromX8): Make the
	incremental transfer of binary selections work get deserialized
	correctly. Thanks to Emiliano Gavilan for detecting.

2009-07-18  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in:		Define NDEBUG in optimized (non-
					symbols) build to disable assert()s.

	* macosx/tkMacOSXBitmap.c:	[Bug 2821318]: Fix tk::mac::iconBitmap
					crash due to off-by-one ckalloc error.
